--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
   overflow-x: hidden;
   background: #ececec;
   color: #151515;
-  border: solid 5px #4ee58b;
+  border: solid 9px #4ee58b;
   margin: 0;
   min-height: 100vh;
 }
@@ -16,6 +16,11 @@ body {
   flex: 1;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.changable {
+  cursor: pointer;
+  user-select: none;
 }
 
 #root {
