One time permission

--- a/src/style.scss
+++ b/src/style.scss
@@ -39,9 +39,8 @@ body {
     width: 100%;
     transform: scaleX(0);
     height: 6px;
-    bottom: 0;
+    bottom: 6px;
     left: 0;
-    top: -2;
     z-index: -1;
     background-color: #4ee58b;
     transform-origin: bottom right;
